Added docker-ization logic for both frontend and backend
